--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,14 @@
           <span>{{ site.data.locales[include.lang].tabs.home | upcase }}</span>
         </a>
       </li>
+
+      <li class="nav-item">
+        <a href="https://medium.com/@dlgkswn3124/list/xai-391c83b3e26e" class="nav-link">
+          <i class="fa-fw fas fa-arrow-left"></i>
+          <span>PREVIOUS</span>
+        </a>
+      </li>
+
       <!-- the real tabs -->
       {% for tab in site.tabs %}
         <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
