fix: fix sidebar previous

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       </li>
 
       <li class="nav-item">
-        <a href="https://medium.com/@dlgkswn3124/list/xai-391c83b3e26e" class="nav-link">
+        <a href="https://medium.com/@dlgkswn3124" class="nav-link">
           <i class="fa-fw fas fa-arrow-left"></i>
           <span>PREVIOUS</span>
         </a>
